# mytool-relm4-rs

./: .gitignore  Cargo.toml  build.rs
data/: resources.gresource.xml
src/: main.rs
src/app/: mod.rs
src/app/components/: about_dialog.rs  content.rs  delete.rs  list_dialog.rs  list_sidebar.rs
src/app/config/: appearance.rs  config.rs  gettext.rs  info.rs  info.rs.in  preferences.rs  resources.rs  setup.rs
src/app/factories/: service.rs
src/app/factories/sub_tasks/: factory.rs
src/app/task/: task.rs
