[package]
name = "mytool-relm4-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_12"] }
relm4 = { version = "0.9.1", features = ["macros", "libadwaita", "gnome_45"] }
relm4-components = "0.9.1"
i18n-embed-fl = "0.9.2"
once_cell = "1.13.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

relm4-icons = "0.10.0-beta.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[build-dependencies]
glib-build-tools = "0.20"
anyhow = "1.0"
relm4-icons-build = "0.10.0-beta.1"

[patch.crates-io]

[profile.dev]
debug = true
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
