[package]
name = "mytool-relm4-rs"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["core"]

[dependencies]
done_core = { path = "core" }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_12"] }
relm4 = { version = "0.9.1", features = ["macros", "libadwaita", "gnome_45"] }
relm4-components = "0.9.1"
i18n-embed-fl = "0.9.2"
libset = "0.1.6"
once_cell = "1.13.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
relm4-icons = "0.10.0-beta.1"
directories = "5.0.1"
derive-new = "0.7.0"
strum = "0.26.3"
strum_macros = "0.26.4"
glib = "0.20.6"
reqwest = "0.12.9"
futures = "0.3.28"
dirs = "5.0.1"
chrono = { version = "0.4.23", features = ["serde"] }


[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[build-dependencies]
glib-build-tools = "0.20"
anyhow = "1.0"
relm4-icons-build = "0.10.0-beta.1"

[patch.crates-io]

[profile.dev]
debug = true
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
